k8s/generated/gcp/manifests.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: serverless-example-hello-world
    k3sfn.io/app: serverless-example
    k3sfn.io/function: hello_world
    k3sfn.io/trigger: http
  name: serverless-example-hello-world
  namespace: apps
spec:
  replicas: 0
  selector:
    matchLabels:
      app: serverless-example-hello-world
  template:
    metadata:
      labels:
        app: serverless-example-hello-world
        k3sfn.io/app: serverless-example
        k3sfn.io/function: hello_world
    spec:
      containers:
      - args:
        - functions
        command:
        - python
        - -m
        - k3sfn.runtime
        image: us-central1-docker.pkg.dev/${PROJECT_ID}/k3s-platform/serverless-example:latest
        livenessProbe:
          httpGet:
            path: /live
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        name: function
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 1
          periodSeconds: 2
        resources:
          limits:
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 256Mi
        startupProbe:
          failureThreshold: 30
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 1
          periodSeconds: 2
      imagePullSecrets:
      - name: artifact-registry
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: serverless-example-hello-world
    k3sfn.io/app: serverless-example
    k3sfn.io/function: hello_world
  name: serverless-example-hello-world
  namespace: apps
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: serverless-example-hello-world
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: serverless-example-hello-world
    k3sfn.io/app: serverless-example
    k3sfn.io/function: hello_world
    k3sfn.io/visibility: public
  name: serverless-example-hello-world-ingress
  namespace: apps
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          app.kubernetes.io/name: traefik
    ports:
    - port: 8080
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: keda
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app: serverless-example-hello-world
  policyTypes:
  - Ingress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: serverless-example-process-data
    k3sfn.io/app: serverless-example
    k3sfn.io/function: process_data
    k3sfn.io/trigger: http
  name: serverless-example-process-data
  namespace: apps
spec:
  replicas: 0
  selector:
    matchLabels:
      app: serverless-example-process-data
  template:
    metadata:
      labels:
        app: serverless-example-process-data
        k3sfn.io/app: serverless-example
        k3sfn.io/function: process_data
    spec:
      containers:
      - args:
        - functions
        command:
        - python
        - -m
        - k3sfn.runtime
        image: us-central1-docker.pkg.dev/${PROJECT_ID}/k3s-platform/serverless-example:latest
        livenessProbe:
          httpGet:
            path: /live
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        name: function
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 1
          periodSeconds: 2
        resources:
          limits:
            memory: 512Mi
          requests:
            cpu: 200m
            memory: 512Mi
        startupProbe:
          failureThreshold: 30
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 1
          periodSeconds: 2
      imagePullSecrets:
      - name: artifact-registry
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: serverless-example-process-data
    k3sfn.io/app: serverless-example
    k3sfn.io/function: process_data
  name: serverless-example-process-data
  namespace: apps
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: serverless-example-process-data
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: serverless-example-process-data
    k3sfn.io/app: serverless-example
    k3sfn.io/function: process_data
    k3sfn.io/visibility: internal
  name: serverless-example-process-data-ingress
  namespace: apps
spec:
  ingress:
  - from:
    - namespaceSelector: {}
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app: serverless-example-process-data
  policyTypes:
  - Ingress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: serverless-example-analyze-content
    k3sfn.io/app: serverless-example
    k3sfn.io/function: analyze_content
    k3sfn.io/trigger: http
  name: serverless-example-analyze-content
  namespace: apps
spec:
  replicas: 0
  selector:
    matchLabels:
      app: serverless-example-analyze-content
  template:
    metadata:
      labels:
        app: serverless-example-analyze-content
        k3sfn.io/app: serverless-example
        k3sfn.io/function: analyze_content
    spec:
      containers:
      - args:
        - functions
        command:
        - python
        - -m
        - k3sfn.runtime
        image: us-central1-docker.pkg.dev/${PROJECT_ID}/k3s-platform/serverless-example:latest
        livenessProbe:
          httpGet:
            path: /live
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        name: function
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 1
          periodSeconds: 2
        resources:
          limits:
            memory: 1Gi
          requests:
            cpu: 500m
            memory: 1Gi
        startupProbe:
          failureThreshold: 30
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 1
          periodSeconds: 2
      imagePullSecrets:
      - name: artifact-registry
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: serverless-example-analyze-content
    k3sfn.io/app: serverless-example
    k3sfn.io/function: analyze_content
  name: serverless-example-analyze-content
  namespace: apps
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: serverless-example-analyze-content
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: serverless-example-analyze-content
    k3sfn.io/app: serverless-example
    k3sfn.io/function: analyze_content
    k3sfn.io/visibility: restricted
  name: serverless-example-analyze-content-ingress
  namespace: apps
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: fastapi
    ports:
    - port: 8080
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: keda
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app: serverless-example-analyze-content
  policyTypes:
  - Ingress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: serverless-example-random-animal
    k3sfn.io/app: serverless-example
    k3sfn.io/function: random_animal
    k3sfn.io/trigger: http
  name: serverless-example-random-animal
  namespace: apps
spec:
  replicas: 0
  selector:
    matchLabels:
      app: serverless-example-random-animal
  template:
    metadata:
      labels:
        app: serverless-example-random-animal
        k3sfn.io/app: serverless-example
        k3sfn.io/function: random_animal
    spec:
      containers:
      - args:
        - functions
        command:
        - python
        - -m
        - k3sfn.runtime
        image: us-central1-docker.pkg.dev/${PROJECT_ID}/k3s-platform/serverless-example:latest
        livenessProbe:
          httpGet:
            path: /live
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        name: function
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 1
          periodSeconds: 2
        resources:
          limits:
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 128Mi
        startupProbe:
          failureThreshold: 30
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 1
          periodSeconds: 2
      imagePullSecrets:
      - name: artifact-registry
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: serverless-example-random-animal
    k3sfn.io/app: serverless-example
    k3sfn.io/function: random_animal
  name: serverless-example-random-animal
  namespace: apps
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: serverless-example-random-animal
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: serverless-example-random-animal
    k3sfn.io/app: serverless-example
    k3sfn.io/function: random_animal
    k3sfn.io/visibility: public
  name: serverless-example-random-animal-ingress
  namespace: apps
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          app.kubernetes.io/name: traefik
    ports:
    - port: 8080
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: keda
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app: serverless-example-random-animal
  policyTypes:
  - Ingress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: serverless-example-health-check
    k3sfn.io/app: serverless-example
    k3sfn.io/function: health_check
    k3sfn.io/trigger: http
  name: serverless-example-health-check
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: serverless-example-health-check
  template:
    metadata:
      labels:
        app: serverless-example-health-check
        k3sfn.io/app: serverless-example
        k3sfn.io/function: health_check
    spec:
      containers:
      - args:
        - functions
        command:
        - python
        - -m
        - k3sfn.runtime
        image: us-central1-docker.pkg.dev/${PROJECT_ID}/k3s-platform/serverless-example:latest
        livenessProbe:
          httpGet:
            path: /live
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        name: function
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 1
          periodSeconds: 2
        resources:
          limits:
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 256Mi
        startupProbe:
          failureThreshold: 30
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 1
          periodSeconds: 2
      imagePullSecrets:
      - name: artifact-registry
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: serverless-example-health-check
    k3sfn.io/app: serverless-example
    k3sfn.io/function: health_check
  name: serverless-example-health-check
  namespace: apps
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: serverless-example-health-check
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: serverless-example-health-check
    k3sfn.io/app: serverless-example
    k3sfn.io/function: health_check
    k3sfn.io/visibility: public
  name: serverless-example-health-check-ingress
  namespace: apps
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          app.kubernetes.io/name: traefik
    ports:
    - port: 8080
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: keda
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app: serverless-example-health-check
  policyTypes:
  - Ingress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: serverless-example-process-tasks
    k3sfn.io/app: serverless-example
    k3sfn.io/function: process_tasks
    k3sfn.io/trigger: queue
  name: serverless-example-process-tasks
  namespace: apps
spec:
  replicas: 0
  selector:
    matchLabels:
      app: serverless-example-process-tasks
  template:
    metadata:
      labels:
        app: serverless-example-process-tasks
        k3sfn.io/app: serverless-example
        k3sfn.io/function: process_tasks
    spec:
      containers:
      - args:
        - functions
        command:
        - python
        - -m
        - k3sfn.runtime
        image: us-central1-docker.pkg.dev/${PROJECT_ID}/k3s-platform/serverless-example:latest
        livenessProbe:
          httpGet:
            path: /live
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        name: function
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 1
          periodSeconds: 2
        resources:
          limits:
            memory: 512Mi
          requests:
            cpu: 200m
            memory: 512Mi
        startupProbe:
          failureThreshold: 30
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 1
          periodSeconds: 2
      imagePullSecrets:
      - name: artifact-registry
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: serverless-example-process-tasks
    k3sfn.io/app: serverless-example
    k3sfn.io/function: process_tasks
  name: serverless-example-process-tasks
  namespace: apps
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: serverless-example-process-tasks
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: serverless-example-process-tasks
    k3sfn.io/app: serverless-example
    k3sfn.io/function: process_tasks
    k3sfn.io/visibility: private
  name: serverless-example-process-tasks-ingress
  namespace: apps
spec:
  ingress:
  - from:
    - podSelector: {}
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app: serverless-example-process-tasks
  policyTypes:
  - Ingress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: serverless-example-send-emails
    k3sfn.io/app: serverless-example
    k3sfn.io/function: send_emails
    k3sfn.io/trigger: queue
  name: serverless-example-send-emails
  namespace: apps
spec:
  replicas: 0
  selector:
    matchLabels:
      app: serverless-example-send-emails
  template:
    metadata:
      labels:
        app: serverless-example-send-emails
        k3sfn.io/app: serverless-example
        k3sfn.io/function: send_emails
    spec:
      containers:
      - args:
        - functions
        command:
        - python
        - -m
        - k3sfn.runtime
        image: us-central1-docker.pkg.dev/${PROJECT_ID}/k3s-platform/serverless-example:latest
        livenessProbe:
          httpGet:
            path: /live
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        name: function
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 1
          periodSeconds: 2
        resources:
          limits:
            memory: 1Gi
          requests:
            cpu: 250m
            memory: 1Gi
        startupProbe:
          failureThreshold: 30
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 1
          periodSeconds: 2
      imagePullSecrets:
      - name: artifact-registry
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: serverless-example-send-emails
    k3sfn.io/app: serverless-example
    k3sfn.io/function: send_emails
  name: serverless-example-send-emails
  namespace: apps
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: serverless-example-send-emails
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: serverless-example-send-emails
    k3sfn.io/app: serverless-example
    k3sfn.io/function: send_emails
    k3sfn.io/visibility: private
  name: serverless-example-send-emails-ingress
  namespace: apps
spec:
  ingress:
  - from:
    - podSelector: {}
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app: serverless-example-send-emails
  policyTypes:
  - Ingress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: serverless-example-process-images
    k3sfn.io/app: serverless-example
    k3sfn.io/function: process_images
    k3sfn.io/trigger: queue
  name: serverless-example-process-images
  namespace: apps
spec:
  replicas: 0
  selector:
    matchLabels:
      app: serverless-example-process-images
  template:
    metadata:
      labels:
        app: serverless-example-process-images
        k3sfn.io/app: serverless-example
        k3sfn.io/function: process_images
    spec:
      containers:
      - args:
        - functions
        command:
        - python
        - -m
        - k3sfn.runtime
        image: us-central1-docker.pkg.dev/${PROJECT_ID}/k3s-platform/serverless-example:latest
        livenessProbe:
          httpGet:
            path: /live
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        name: function
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 1
          periodSeconds: 2
        resources:
          limits:
            memory: 2Gi
          requests:
            cpu: '1'
            memory: 2Gi
        startupProbe:
          failureThreshold: 30
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 1
          periodSeconds: 2
      imagePullSecrets:
      - name: artifact-registry
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: serverless-example-process-images
    k3sfn.io/app: serverless-example
    k3sfn.io/function: process_images
  name: serverless-example-process-images
  namespace: apps
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: serverless-example-process-images
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: serverless-example-process-images
    k3sfn.io/app: serverless-example
    k3sfn.io/function: process_images
    k3sfn.io/visibility: private
  name: serverless-example-process-images-ingress
  namespace: apps
spec:
  ingress:
  - from:
    - podSelector: {}
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app: serverless-example-process-images
  policyTypes:
  - Ingress
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: serverless-example-hello-world
    k3sfn.io/app: serverless-example
    k3sfn.io/component: keda-route
    k3sfn.io/function: hello_world
  name: keda-route-serverless-example-hello-world
  namespace: apps
spec:
  externalName: keda-add-ons-http-interceptor-proxy.keda.svc.cluster.local
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  type: ExternalName
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    haproxy-ingress.github.io/config-backend: 'http-request set-header Host serverless-example-hello-world.apps

      '
    haproxy-ingress.github.io/retries: '3'
    haproxy-ingress.github.io/retry-on: conn-failure,empty-response,response-timeout
    haproxy-ingress.github.io/timeout-client: 180s
    haproxy-ingress.github.io/timeout-connect: 10s
    haproxy-ingress.github.io/timeout-queue: 180s
    haproxy-ingress.github.io/timeout-server: 180s
  labels:
    app: serverless-example-hello-world
    k3sfn.io/app: serverless-example
    k3sfn.io/function: hello_world
    k3sfn.io/ingress: haproxy
  name: serverless-example-hello-world-haproxy
  namespace: apps
spec:
  ingressClassName: haproxy
  rules:
  - http:
      paths:
      - backend:
          service:
            name: keda-route-serverless-example-hello-world
            port:
              number: 8080
        path: /api/hello
        pathType: Prefix
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: serverless-example-random-animal
    k3sfn.io/app: serverless-example
    k3sfn.io/component: keda-route
    k3sfn.io/function: random_animal
  name: keda-route-serverless-example-random-animal
  namespace: apps
spec:
  externalName: keda-add-ons-http-interceptor-proxy.keda.svc.cluster.local
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  type: ExternalName
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    haproxy-ingress.github.io/config-backend: 'http-request set-header Host serverless-example-random-animal.apps

      '
    haproxy-ingress.github.io/retries: '3'
    haproxy-ingress.github.io/retry-on: conn-failure,empty-response,response-timeout
    haproxy-ingress.github.io/timeout-client: 180s
    haproxy-ingress.github.io/timeout-connect: 10s
    haproxy-ingress.github.io/timeout-queue: 180s
    haproxy-ingress.github.io/timeout-server: 180s
  labels:
    app: serverless-example-random-animal
    k3sfn.io/app: serverless-example
    k3sfn.io/function: random_animal
    k3sfn.io/ingress: haproxy
  name: serverless-example-random-animal-haproxy
  namespace: apps
spec:
  ingressClassName: haproxy
  rules:
  - http:
      paths:
      - backend:
          service:
            name: keda-route-serverless-example-random-animal
            port:
              number: 8080
        path: /api/animal
        pathType: Prefix
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: serverless-example-health-check
    k3sfn.io/app: serverless-example
    k3sfn.io/component: keda-route
    k3sfn.io/function: health_check
  name: keda-route-serverless-example-health-check
  namespace: apps
spec:
  externalName: keda-add-ons-http-interceptor-proxy.keda.svc.cluster.local
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  type: ExternalName
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    haproxy-ingress.github.io/config-backend: 'http-request set-header Host serverless-example-health-check.apps

      '
    haproxy-ingress.github.io/retries: '3'
    haproxy-ingress.github.io/retry-on: conn-failure,empty-response,response-timeout
    haproxy-ingress.github.io/timeout-client: 180s
    haproxy-ingress.github.io/timeout-connect: 10s
    haproxy-ingress.github.io/timeout-queue: 180s
    haproxy-ingress.github.io/timeout-server: 180s
  labels:
    app: serverless-example-health-check
    k3sfn.io/app: serverless-example
    k3sfn.io/function: health_check
    k3sfn.io/ingress: haproxy
  name: serverless-example-health-check-haproxy
  namespace: apps
spec:
  ingressClassName: haproxy
  rules:
  - http:
      paths:
      - backend:
          service:
            name: keda-route-serverless-example-health-check
            port:
              number: 8080
        path: /api/health
        pathType: Prefix
